--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -1,35 +1,62 @@
 .greetingForm {
+    margin-top: 30px;
+    margin-left: 70px;
 }
 
 .inputAndButtonContainer {
+    display: flex;
 }
 
-.error {
-}
+.error {}
 
 .input {
+
+    height: 36px;
+    width: 361px;
+
+    border: 1px solid #D1D1D1;
+    border-radius: 5px;
 }
 
-.input:focus {
-}
+.input:focus {}
 
 .errorInput {
+    height: 36px;
+    width: 361px;
+
+    border: 1px solid #D1D1D1;
+    border-radius: 5px;
 }
 
 .button {
+    margin-left: 12px;
+    width: 78px;
+    height: 36px;
+    left: 454px;
+    top: 1024px;
+
+
+
+    background: #0066CC;
+    opacity: 0.5;
+    border-radius: 3px;
+
+
+
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
 }
 
-.button:focus {
-}
+.button:focus {}
 
-.button:active {
-}
+.button:active {}
 
-.button:disabled {
-}
+.button:disabled {}
 
-.text {
-}
+.text {}
 
-.greeting {
-}
+.greeting {}
