--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,36 +1,173 @@
-.button {
-}
+.button {}
 
 .disabled {
+    width: 133px;
+height: 30px;
+
+background: #004D99;
+opacity: 0.5;
+border-radius: 3px;
+
+font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 20px;
+
+color: #002E5C;
 }
 
 .secondary {
+    width: 149px;
+    height: 30px;
+
+
+    background: #ffffff;
+    border: 1px solid #0066CC;
+    border-radius: 3px;
+
+    font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 20px;
+
+color: #0066CC;
 }
 
 .default {
+    width: 132px;
+    height: 30px;
+    background: #0066CC;
+    border-radius: 3px;
+
+    font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 20px;
+
+color: #FFFFFF;
 }
 
 .red {
+    width: 129px;
+    height: 30px;
+    background: #CC1439;
+    border-radius: 3px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    
+    color: #FFFFFF;
 }
 
 .default:hover {
+    width: 167px;
+    height: 30px;
+    background: #0080FF;
+    border-radius: 3px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    
+    color: #FFFFFF;
 }
 
 .red:hover {
+    width: 167px;
+    height: 30px;
+    background: #FF1A47;
+    border-radius: 3px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    
+    color: #FFFFFF;
 }
 
 .secondary:hover {
+    width: 167px;
+    height: 30px;
+
+
+    background: #E5F0FA;
+    border: 1px solid #0066CC;
+    border-radius: 3px;
+    font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 20px;
+
+color: #0066CC;
 }
 
 
 .default:active {
+    width: 149px;
+    height: 30px;
+    background: #0059B3;
+    border-radius: 3px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    
+    color: #FFFFFF;
 }
 
 .secondary:active {
+    width: 149px;
+    height: 30px;
+
+
+    background: #C9E5FF;
+    border: 1px solid #0066CC;
+    border-radius: 3px;
+    font-family: 'Montserrat';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 20px;
+
+color: #0066CC;
 }
 
 .red:active {
+    width: 149px;
+    height: 30px;
+    background: #B31232;
+    border-radius: 3px;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    
+    color: #FFFFFF;
 }
 
 .button:disabled {
+    width: 133px;
+    height: 30px;
+    
+    background: #004D99;
+    opacity: 0.5;
+    border-radius: 3px;
+    
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    
+    color: #002E5C;
 }
