--- a/src/s2-homeworks/hw07/HW7.module.css
+++ b/src/s2-homeworks/hw07/HW7.module.css
@@ -1,2 +1,10 @@
 .container {
+    margin-left: 50px;
+    margin-top: 20px;
+    display: flex;
+    width: 500px;
+    justify-content: space-between;
 }
+
+
+    
