--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -40,6 +40,7 @@ color: #0066CC;
     height: 30px;
     background: #0066CC;
     border-radius: 3px;
+    border-color: #0066CC;
 
     font-family: 'Montserrat';
 font-style: normal;
@@ -68,6 +69,7 @@ color: #FFFFFF;
     width: 167px;
     height: 30px;
     background: #0080FF;
+    border-color: #0066CC;
     border-radius: 3px;
     font-family: 'Montserrat';
     font-style: normal;
@@ -114,6 +116,7 @@ color: #0066CC;
     width: 149px;
     height: 30px;
     background: #0059B3;
+    border-color: #0066CC;
     border-radius: 3px;
     font-family: 'Montserrat';
     font-style: normal;
