--- a/src/s2-homeworks/hw08/HW8.module.css
+++ b/src/s2-homeworks/hw08/HW8.module.css
@@ -1,23 +1,39 @@
-.item {
-}
-
-.item:last-of-type {
-}
+.item {}
 
 .users {
+    border-collapse:collapse;
+    width: 645px;
+    height: 50px;
+    margin-left: 50px;
+    margin-top: 10px;
+    margin-bottom: 30px;
 }
 
 .buttonsContainer {
+    display: flex;
+    justify-content: space-around;
+    width: 500px;
+    margin-left: 200px;
+    margin-top: 20px;
 }
 
-.container {
-}
+.container {}
 
 .thead {
+    background: #E5E5E5;
 }
 
 .nameCol {
+    padding-left: 10px;
+    border-bottom: 1px solid #E5E5E5;
 }
 
 .ageCol {
+    padding-left: 10px;
+    border-bottom: 1px solid #E5E5E5;
+}
+
+.item:last-of-type {
+    
+    
 }
