--- a/src/s2-homeworks/hw09/Clock.module.css
+++ b/src/s2-homeworks/hw09/Clock.module.css
@@ -1,14 +1,24 @@
 .buttonsContainer {
+    display: flex;
+    justify-content: space-between;
+    width: 300px;
+    margin-left: 30px;
+    margin-top: 10px;
+   
 }
 
 .clock {
+    margin-left: 30px;
 }
 
 .watch {
+    margin-left: 30px;
 }
 
 .watch strong {
+    
 }
 
 .more {
+    margin-left: 30px;
 }
