--- a/src/s2-homeworks/hw11/HW11.module.css
+++ b/src/s2-homeworks/hw11/HW11.module.css
@@ -1,8 +1,13 @@
 .container {
+    margin-left: 50px;
 }
 
 .wrapper {
+    display: flex;
+    align-items: center;
 }
 
 .number {
+    margin-right: 15px;
+    margin-left: 15px;
 }
