--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,9 +1,10 @@
 .select {
-    width: 165px;
-    height: 24px;
+    width: 40px;
+    height: 30px;
     background: #FFFFFF;
     border: 1px solid #C2C2C2;
     border-radius: 2px;
+    text-align: center;
 }
 
 .select:focus {
