--- a/src/s2-homeworks/hw15/HW15.module.css
+++ b/src/s2-homeworks/hw15/HW15.module.css
@@ -1,5 +1,5 @@
 .tech {
-    width: 50vw;
+    width: 25vw;
 }
 
 .developer {
@@ -7,19 +7,32 @@
 }
 
 .techHeader {
-    width: 50vw;
+    width: 25vw;
+    font-weight: 600;
+    display: flex;
+    align-items: flex-start;
+    background-color: rgb(172, 172, 172);
 }
 
 .developerHeader {
+    font-weight: 600;
+    display: flex;
+    align-items: flex-start;
+    background-color: rgb(172, 172, 172);
 
 }
 
 .row {
     display: flex;
+    margin-left: 20px;
+    border-bottom: 1px solid black;
+    width: 30vw;
 }
 
 .rowHeader {
     display: flex;
+    margin-top: 20px;
+    margin-left: 20px;
 }
 
 .loading {
